--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,5 +1,5 @@
 body {
-  font-family: "PT Sans", Arial, sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
   background-color: white;
   text-transform: uppercase;
   color: black;
@@ -7,7 +7,7 @@ body {
 }
 
 a {
-  text-decoration: none
+  text-decoration: none;
 }
 
 li {
