--- a/source/less/style.less
+++ b/source/less/style.less
@@ -14,10 +14,18 @@ li {
   list-style: none;
 }
 
-@import "page-header.less";
+@import "blocks/site-list.less";
 @import "visually-hidden.less";
-@import "description.less";
-@import "advantage.less";
-@import "book.less";
-@import "page-footer.less";
-@import "photo.less";
+@import "blocks/description.less";
+@import "blocks/advantage.less";
+@import "blocks/book.less";
+@import "blocks/page-footer.less";
+@import "blocks/photo.less";
+@import "block/advantage-text.less";
+@import "block/button.less";
+@import "block/social.less";
+@import "block/copyright.less";
+@import "block/main-nav.less";
+@import "block/photo-view.less";
+@import "block/point-list.less";
+@import "block/variable.less";
