--- a/source/less/blocks/advantage.less
+++ b/source/less/blocks/advantage.less
@@ -16,48 +16,20 @@
 }
 
 .advatage__description {
-  background-color: #81b3d2;
+  background-color: @blue;
   padding-top: 37px;
   padding-bottom: 44px;
 
   &--road,
   &--area,
   &--tourists {
-    background-color: #eeeeee;
+    background-color: @lightgrey;
   }
 
   &--road,
   &--tourists {
     padding-top: 0;
   }
-}
-
-.advatage-text__title {
-  font-size: 18px;
-  line-height: 26px;
-  font-weight: bold;
-  margin: 0;
-}
-
-.advatage-text__number {
-  font-size: 14px;
-  margin: 0;
-  padding-top: 12px;
-  padding-bottom: 22px;
-}
-
-.advatage-text__intro {
-  font-size: 14px;
-  margin: 0;
-}
-
-.point-list__title {
-  .advatage-text__title;
-}
-
-.point-list__text {
-  .advatage-text__intro;
-  padding-top: 25px;
 }
 
 .advatage__point-list {
