--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -1,5 +1,3 @@
-@color: #ffffff;
-
 .site-list__item {
   font-size: 18px;
   line-height: 40px;
@@ -10,14 +8,5 @@
 }
 
 .site-list__item a {
-  color: @color;
-}
-
-.main-nav {
-  background-color: #81b3d2;
-}
-
-.main-nav__list {
-  padding: 0;
-  margin: 0;
+  color: @white;
 }
