--- a/source/less/normalize.less
+++ b/source/less/normalize.less
@@ -10,7 +10,7 @@
 
 html {
   line-height: 1.15; /* 1 */
-  text-size-adjust: 100%; /* 2 */
+  -webkit-text-size-adjust: 100%; /* 2 */
 }
 
 /* Sections
@@ -62,7 +62,7 @@ hr {
  */
 
 pre {
-  font-family: monospace; /* 1 */
+  font-family: monospace, monospace; /* 1 */
   font-size: 1em; /* 2 */
 }
 
@@ -84,6 +84,7 @@ a {
 
 abbr[title] {
   border-bottom: none; /* 1 */
+  text-decoration: underline; /* 2 */
   text-decoration: underline dotted; /* 2 */
 }
 
@@ -104,7 +105,7 @@ strong {
 code,
 kbd,
 samp {
-  font-family: monospace; /* 1 */
+  font-family: monospace, monospace; /* 1 */
   font-size: 1em; /* 2 */
 }
 
@@ -195,17 +196,17 @@ button,
 [type="button"],
 [type="reset"],
 [type="submit"] {
-  appearance: button;
+  -webkit-appearance: button;
 }
 
 /**
  * Remove the inner border and padding in Firefox.
  */
 
-button::focus-inner,
-[type="button"]::focus-inner,
-[type="reset"]::focus-inner,
-[type="submit"]:: focus-inner {
+button::-moz-focus-inner,
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
   border-style: none;
   padding: 0;
 }
@@ -214,10 +215,10 @@ button::focus-inner,
  * Restore the focus styles unset by the previous rule.
  */
 
-button: focusring,
-[type="button"]: focusring,
-[type="reset"]: focusring,
-[type="submit"]: focusring {
+button:-moz-focusring,
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring {
   outline: 1px dotted ButtonText;
 }
 
@@ -276,8 +277,8 @@ textarea {
  * Correct the cursor style of increment and decrement buttons in Chrome.
  */
 
-[type="number"]::inner-spin-button,
-[type="number"]::outer-spin-button {
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
   height: auto;
 }
 
@@ -287,7 +288,7 @@ textarea {
  */
 
 [type="search"] {
-  appearance: textfield; /* 1 */
+  -webkit-appearance: textfield; /* 1 */
   outline-offset: -2px; /* 2 */
 }
 
@@ -295,8 +296,8 @@ textarea {
  * Remove the inner padding in Chrome and Safari on macOS.
  */
 
-[type="search"]::search-decoration {
-  appearance: none;
+[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none;
 }
 
 /**
@@ -304,8 +305,8 @@ textarea {
  * 2. Change font properties to `inherit` in Safari.
  */
 
-::file-upload-button {
-  appearance: button; /* 1 */
+::-webkit-file-upload-button {
+  -webkit-appearance: button; /* 1 */
   font: inherit; /* 2 */
 }
 
