--- a/source/less/blocks/point-list.less
+++ b/source/less/blocks/point-list.less
@@ -6,6 +6,9 @@
 }
 
 .point-list__text {
-  .point-list__title;
   padding-top: 25px;
+  font-weight: 400px;
+  font-size: 14px;
+  line-height: 21px;
+  margin: 0;
 }
