--- a/source/less/blocks/advantage-text.less
+++ b/source/less/blocks/advantage-text.less
@@ -1,18 +1,31 @@
-.advatage-text__title {
+.advantage-text {
+  text-align: center;
+  color: @white;
+}
+
+.advantage-text__title {
   font-size: 18px;
   line-height: 26px;
   font-weight: bold;
   margin: 0;
+  padding-top: 41px;
 }
 
-.advatage-text__number {
+.advantage-text__number {
   font-size: 14px;
   margin: 0;
   padding-top: 12px;
   padding-bottom: 22px;
 }
 
-.advatage-text__intro {
+.advantage-text__intro {
   font-size: 14px;
   margin: 0;
+}
+
+@media (min-width: @tablet-width) {
+
+  .advantage-text__title {
+    padding-top: 0
+  }
 }
