--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -6,3 +6,19 @@
   padding: 0;
   margin: 0;
 }
+
+@media (min-width: @tablet-width) {
+  .main-nav__list {
+    background-color: @white;
+    display: flex;
+    padding-right: 27px;
+    padding-left: 50px;
+    justify-content: space-around;
+    padding-top: 22px;
+  }
+
+  .main-nav button {
+    display: none;
+  }
+}
+
