--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -10,3 +10,24 @@
 .site-list__item a {
   color: @white;
 }
+
+@media (min-width: @tablet-width) {
+  .site-list__item {
+    font-size: 14px;
+    font-weight: bold;
+    line-height: 26px;
+    margin: 0;
+  }
+
+  .site-list__item a {
+    color: #000000;
+  }
+
+  .site-list__item:nth-child(3) {
+    order: 1;
+  }
+
+  .site-list__item:nth-child(4) {
+    order: 1;
+  }
+}
