--- a/source/less/blocks/photo-view.less
+++ b/source/less/blocks/photo-view.less
@@ -23,4 +23,112 @@
 .photo-view__like {
   margin: 0;
   padding-bottom: 22px;
+  padding-left: 37px;
+}
+
+.photo-view__img {
+  height: 280px;
+  width: 280px;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.photo-view__img--sunset {
+  background-image: url(../../img/photo-sunset-mobile@1x.jpg);
+}
+
+.photo-view__img--flora {
+  background-image: url(../../img/photo-cactus-mobile@1x.jpg);
+}
+
+.photo-view__img--road {
+  background-image: url(../../img/photo-roads-mobile@1x.jpg);
+}
+
+.photo-view__img--bridge {
+  background-image: url(../../img/photo-bridge-mobile@1x.jpg);
+}
+
+@media (min-width: @tablet-width) {
+  .photo-view__img--sunset {
+    height: 400px;
+    width: 648px;
+    background-image: url(../../img/photo-sunset-tablet@1x.jpg);
+  }
+
+  .photo-view__caption {
+    background-color: #f2f2f2;
+    display: flex;
+    justify-content: space-between;
+    padding: 22px 20px;
+    align-items: center;
+  }
+
+  .photo-view__title {
+    padding: 0;
+  }
+
+  .photo-view__autor {
+    padding: 0;
+  }
+
+  .photo-view__like {
+    padding-bottom: 0;
+  }
+
+  .photo-view__img--flora {
+    background-image: url(../../img/photo-cactus-tablet@1x.jpg);
+  }
+
+  .photo-view__img--road {
+    background-image: url(../../img/photo-roads-tablet@1x.jpg);
+  }
+
+  .photo-view__img--bridge {
+    background-image: url(../../img/photo-bridge-tablet@1x.jpg);
+  }
+
+  .photo-view__img {
+    &--flora,
+    &--road,
+    &--bridge {
+      width: 324px;
+      height: 267px;
+    }
+  }
+}
+@media (min-width: @desktop-width) {
+  .photo-view__img--sunset {
+    height: 400px;
+    width: 1200px;
+    background-image: url(../../img/photo-sunset-desktop@1x.jpg);
+  }
+
+  .photo-view__img--flora {
+    background-image: url(../../img/photo-cactus-desktop@1x.jpg);
+  }
+
+  .photo-view__img--road {
+    background-image: url(../../img/photo-roads-desktop@1x.jpg);
+  }
+
+  .photo-view__img--bridge {
+    background-image: url(../../img/photo-bridge-desktop@1x.jpg);
+  }
+
+  .photo-view__img {
+    &--flora,
+    &--road,
+    &--bridge {
+      width: 400px;
+    }
+  }
+
+  .photo-view__caption {
+    color: @white;
+    background-color: rgba(0, 0, 0, 0.3);
+    margin-top: -80px;
+    padding: 16px 20px;
+  }
 }
