--- a/source/less/style.less
+++ b/source/less/style.less
@@ -15,13 +15,16 @@
 @import "blocks/photo-view.less";
 @import "blocks/point-list.less";
 
+html {
+  box-sizing: border-box;
+}
+
 body {
   font-family: "PT Sans", "Arial", sans-serif;
   background-color: white;
   text-transform: uppercase;
   color: black;
   min-width: 320px;
-  box-sizing: border-box;
 }
 
 a {
