--- a/source/less/blocks/advantage-text.less
+++ b/source/less/blocks/advantage-text.less
@@ -1,6 +1,5 @@
 .advantage-text {
   text-align: center;
-  color: @white;
 }
 
 .advantage-text__title {
@@ -8,24 +7,88 @@
   line-height: 26px;
   font-weight: bold;
   margin: 0;
-  padding-top: 41px;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+.advantage-text__title--city {
+  padding-top: 42px;
 }
 
 .advantage-text__number {
   font-size: 14px;
   margin: 0;
-  padding-top: 12px;
-  padding-bottom: 22px;
+  padding-top: 15px;
+  padding-bottom: 24px;
 }
 
 .advantage-text__intro {
   font-size: 14px;
+  line-height: 21px;
   margin: 0;
+
+  &--road,
+  &--tourists {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
 }
 
 @media (min-width: @tablet-width) {
-
   .advantage-text__title {
-    padding-top: 0
+    padding-top: 0;
+    padding-right: 17px;
+    padding-left: 16px;
+  }
+
+  .advantage-text__title--city {
+    padding-top: 0px;
+  }
+
+  .advantage-text__title--tourists {
+    padding-left: 25px;
+    padding-right: 25px;
+  }
+
+  .advantage-text__intro {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .advantage-text__intro--area {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .advantage-text__intro--road {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .advantage-text__title {
+    padding-right: 100px;
+    padding-left: 100px;
+  }
+
+  .advantage-text__title--bridge {
+    padding-left: 88px;
+    padding-right: 88px;
+  }
+
+  .advantage-text__intro--road {
+    padding-right: 5px;
+    padding-left: 5px;
+  }
+
+  .advantage-text__intro--city {
+    padding-right: 10px;
+    padding-left: 10px;
+  }
+
+  .advantage-text__intro--bridge {
+    padding-right: 40px;
+    padding-left: 40px;
   }
 }
