--- a/source/less/blocks/description.less
+++ b/source/less/blocks/description.less
@@ -9,10 +9,18 @@
 .description__img {
   height: 390px;
   background-size: 280px auto, 320px auto, auto;
-  // background-color: grey;
   background-image: url("../img/text-sedona-index.svg"), url("../img/bg-intro-triangle-mobile.svg"), url("../img/bg-back-mobile@1x.jpg");
   background-position: center, bottom, center;
   background-repeat: no-repeat;
+}
+
+.description__img-photo {
+  height: 158px;
+  background-size: 280px auto, 320px auto, auto;
+  background-image: url("../img/text-sedona.svg"), url("../img/bg-intro-triangle-mobile.svg"), url("../img/bg-back-mobile@1x.jpg");
+  background-position: center, bottom, bottom;
+  background-repeat: no-repeat;
+
 }
 
 .description__text {
@@ -21,24 +29,39 @@
 
 @media (min-width: @tablet-width) {
   .description__img {
-  height: 518px;
-  background-image: url("../img/text-sedona-index.svg"), url("../img/bg-intro-triangle-tablet.svg"), url("../img/bg-back-tablet@1x.jpg");
-  background-size: 460px auto, contain, auto;
+    height: 518px;
+    background-image: url("../img/text-sedona-index.svg"), url("../img/bg-intro-triangle-tablet.svg"), url("../img/bg-back-tablet@1x.jpg");
+    background-size: 458px auto, contain, auto;
   }
 
   .description__main {
-  padding: 52px 164px 38px;
+    padding: 52px 164px 38px;
   }
+
+  .description__img-photo {
+    height: 290px;
+    background-size: 280px auto, auto, auto;
+    background-image: url("../img/text-sedona.svg"), url("../img/bg-intro-triangle-tablet.svg"), url("../img/bg-back-mobile@1x.jpg");
+    background-size: 458px auto, contain, auto;
+    background-position: center, bottom, start;
+  }
+
 }
 
 @media (min-width: @desktop-width) {
   .description__img {
-  height: 458px;
-  background-image: url("../img/text-sedona-index.svg"), url("../img/bg-intro-triangle-desktop.svg"), url("../img/bg-back-desktop@1x.jpg");
-  background-size: 460px auto, 1200px auto, auto;
+    height: 518px;
+    background-image: url("../img/text-sedona-index.svg"), url("../img/bg-intro-triangle-desktop.svg"), url("../img/bg-back-desktop@1x.jpg");
+    background-size: 461px auto, 1200px auto, auto;
   }
 
   .description__main {
-  padding: 52px 382px 36px;
+    padding: 52px 382px 36px;
+  }
+
+  .description__img-photo {
+    height: 301px;
+    background-image: url("../img/text-sedona.svg"), url("../img/bg-intro-triangle-desktop.svg"), url("../img/bg-back-desktop@1x.jpg");
+    background-size: 461px auto, 1200px auto, auto;
   }
 }
