--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -2,6 +2,10 @@
   background-color: @blue;
 }
 
+.main-nav__logo {
+  background-color: @white;
+}
+
 .main-nav__list {
   padding: 0;
   margin: 0;
@@ -21,4 +25,3 @@
     display: none;
   }
 }
-
