--- a/source/less/blocks/advantage.less
+++ b/source/less/blocks/advantage.less
@@ -2,7 +2,6 @@
   font-size: 14px;
   line-height: 26px;
   font-weight: 400;
-  padding: 0 35px 34px;
   margin: 0;
   text-align: center;
   padding: 0 32px 33px;
@@ -60,11 +59,11 @@
 }
 
 .advantage__img--city {
-  background-image: url(../../img/main-city-mobile@1x.jpg);
+  background-image: url("../../img/main-city-mobile@1x.jpg");
 }
 
 .advantage__img--bridge {
-  background-image: url(../../img/main-bridge-mobile@1x.jpg);
+  background-image: url("../../img/main-bridge-mobile@1x.jpg");
 }
 
 .advantage__wraper-bottom {
@@ -89,18 +88,16 @@
   .advantage__description {
     flex-basis: 256px;
     padding: 45px 45px 47px 45px;
-  }
 
-  .advantage__description--city {
-    background-image: none;
-  }
-
-  .advantage__description {
     &--road,
     &--area,
     &--tourists {
       padding: 49px 40px 50px;
     }
+  }
+
+  .advantage__description--city {
+    background-image: none;
   }
 
   .advantage__description--area {
@@ -115,11 +112,11 @@
   }
 
   .advantage__img--city {
-    background-image: url(../../img/main-city-tablet@1x.jpg);
+    background-image: url("../../img/main-city-tablet@1x.jpg");
   }
 
   .advantage__img--bridge {
-    background-image: url(../../img/main-bridge-tablet@1x.jpg);
+    background-image: url("../../img/main-bridge-tablet@1x.jpg");
   }
 
   .advantage__img {
