--- a/source/less/blocks/description.less
+++ b/source/less/blocks/description.less
@@ -9,7 +9,7 @@
 .description__img {
   height: 390px;
   background-size: 280px auto, 320px auto, auto;
-  background-image: url("../img/text-sedona-index.svg"), url("../img/bg-intro-triangle-mobile.svg"), url("../img/bg-back-mobile@1x.jpg");
+  background-image: url("../img/text-sedona-index.svg"), url("../img/bg-intro-triangle-mobile.svg"), url("../../img/bg-back-mobile@1x.jpg");
   background-position: center, bottom, center;
   background-repeat: no-repeat;
 }
@@ -17,10 +17,9 @@
 .description__img-photo {
   height: 158px;
   background-size: 280px auto, 320px auto, auto;
-  background-image: url("../img/text-sedona.svg"), url("../img/bg-intro-triangle-mobile.svg"), url("../img/bg-back-mobile@1x.jpg");
+  background-image: url("../img/text-sedona.svg"), url("../img/bg-intro-triangle-mobile.svg"), url("../../img/bg-back-mobile@1x.jpg");
   background-position: center, bottom, bottom;
   background-repeat: no-repeat;
-
 }
 
 .description__text {
@@ -30,7 +29,7 @@
 @media (min-width: @tablet-width) {
   .description__img {
     height: 518px;
-    background-image: url("../img/text-sedona-index.svg"), url("../img/bg-intro-triangle-tablet.svg"), url("../img/bg-back-tablet@1x.jpg");
+    background-image: url("../img/text-sedona-index.svg"), url("../img/bg-intro-triangle-tablet.svg"), url("../../img/bg-back-tablet@1x.jpg");
     background-size: 458px auto, contain, auto;
   }
 
@@ -40,12 +39,10 @@
 
   .description__img-photo {
     height: 290px;
-    background-size: 280px auto, auto, auto;
     background-image: url("../img/text-sedona.svg"), url("../img/bg-intro-triangle-tablet.svg"), url("../img/bg-back-mobile@1x.jpg");
-    background-size: 458px auto, contain, auto;
-    background-position: center, bottom, start;
+    background-size: 458px auto, contain, 130%;
+    background-position: center, bottom, bottom;
   }
-
 }
 
 @media (min-width: @desktop-width) {
