--- a/source/less/blocks/photo-view.less
+++ b/source/less/blocks/photo-view.less
@@ -35,26 +35,26 @@
 }
 
 .photo-view__img--sunset {
-  background-image: url(../../img/photo-sunset-mobile@1x.jpg);
+  background-image: url("../../img/photo-sunset-mobile@1x.jpg");
 }
 
 .photo-view__img--flora {
-  background-image: url(../../img/photo-cactus-mobile@1x.jpg);
+  background-image: url("../../img/photo-cactus-mobile@1x.jpg");
 }
 
 .photo-view__img--road {
-  background-image: url(../../img/photo-roads-mobile@1x.jpg);
+  background-image: url("./../img/photo-roads-mobile@1x.jpg");
 }
 
 .photo-view__img--bridge {
-  background-image: url(../../img/photo-bridge-mobile@1x.jpg);
+  background-image: url("../../img/photo-bridge-mobile@1x.jpg");
 }
 
 @media (min-width: @tablet-width) {
   .photo-view__img--sunset {
     height: 400px;
     width: 648px;
-    background-image: url(../../img/photo-sunset-tablet@1x.jpg);
+    background-image: url("../../img/photo-sunset-tablet@1x.jpg");
   }
 
   .photo-view__caption {
@@ -78,15 +78,15 @@
   }
 
   .photo-view__img--flora {
-    background-image: url(../../img/photo-cactus-tablet@1x.jpg);
+    background-image: url("../../img/photo-cactus-tablet@1x.jpg");
   }
 
   .photo-view__img--road {
-    background-image: url(../../img/photo-roads-tablet@1x.jpg);
+    background-image: url("../../img/photo-roads-tablet@1x.jpg");
   }
 
   .photo-view__img--bridge {
-    background-image: url(../../img/photo-bridge-tablet@1x.jpg);
+    background-image: url("../../img/photo-bridge-tablet@1x.jpg");
   }
 
   .photo-view__img {
@@ -98,23 +98,24 @@
     }
   }
 }
+
 @media (min-width: @desktop-width) {
   .photo-view__img--sunset {
     height: 400px;
     width: 1200px;
-    background-image: url(../../img/photo-sunset-desktop@1x.jpg);
+    background-image: url("../../img/photo-sunset-desktop@1x.jpg");
   }
 
   .photo-view__img--flora {
-    background-image: url(../../img/photo-cactus-desktop@1x.jpg);
+    background-image: url("../../img/photo-cactus-desktop@1x.jpg");
   }
 
   .photo-view__img--road {
-    background-image: url(../../img/photo-roads-desktop@1x.jpg);
+    background-image: url("../../img/photo-roads-desktop@1x.jpg");
   }
 
   .photo-view__img--bridge {
-    background-image: url(../../img/photo-bridge-desktop@1x.jpg);
+    background-image: url("../../img/photo-bridge-desktop@1x.jpg");
   }
 
   .photo-view__img {
