--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -9,11 +9,9 @@
 
 .site-list__item--logo {
   height: 56px;
-  // background-color: @white;
-  background-image: url(../../img/logo-sedona-mobile.svg);
+  background-image: url("../../img/logo-sedona-mobile.svg");
   background-size: 102px 85px;
   background-position: center;
-
   background-repeat: no-repeat;
 }
 
@@ -43,16 +41,14 @@
 
   .site-list__item--logo {
     height: 56px;
-    background-image: url(../../img/logo-sedona-tablet.svg);
+    background-image: url("../../img/logo-sedona-tablet.svg");
     background-size: 102px 83px;
   }
-
-
 }
 
 @media (min-width: @desktop-width) {
   .site-list__item--logo {
-    background-image: url(../../img/logo-sedona-desktop.svg);
+    background-image: url("../../img/logo-sedona-desktop.svg");
     background-size: 188px 96px;
   }
 }
