--- a/source/less/blocks/description.less
+++ b/source/less/blocks/description.less
@@ -8,7 +8,7 @@
 
 .description__img {
   height: 390px;
-  background-size: 280px auto, 320px auto, auto;
+  background-size: 280px auto, contain, auto;
   background-image: url("../img/text-sedona-index.svg"), url("../img/bg-intro-triangle-mobile.svg"), url("../../img/bg-back-mobile@1x.jpg");
   background-position: center, bottom, center;
   background-repeat: no-repeat;
@@ -16,7 +16,7 @@
 
 .description__img-photo {
   height: 158px;
-  background-size: 280px auto, 320px auto, auto;
+  background-size: 280px auto, contain, auto;
   background-image: url("../img/text-sedona.svg"), url("../img/bg-intro-triangle-mobile.svg"), url("../../img/bg-back-mobile@1x.jpg");
   background-position: center, bottom, bottom;
   background-repeat: no-repeat;
