--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,5 +1,8 @@
 .page-footer {
   padding: 40px 85px 22px;
+  margin: auto;
+  max-width: 300px;
+  text-align: center;
 }
 
 .page-footer__hashtag {
@@ -15,6 +18,7 @@
     justify-content: space-between;
     padding: 36px 60px;
     align-items: center;
+    max-width: 100%;
   }
 
   .page-footer__hashtag {
