--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -5,6 +5,22 @@
   padding-bottom: 8px;
   margin: auto;
   font-weight: bold;
+  text-align: center;
+  border-top: 1px solid #9ac2db;
+  border-bottom: 1px solid #678fa8;
+
+  &:hover {
+    background-color: #669ec0;
+  }
+
+  &:active {
+    color: rgba(255, 255, 255, 0.3);
+    background-color: #5496bd;
+  }
+}
+
+.site-list__item:nth-child(4) {
+  box-shadow: inset 0 -10px 10px -8px rgba(0, 0, 0, 0.4);
 }
 
 .site-list__item--logo {
@@ -13,6 +29,12 @@
   background-size: 102px 85px;
   background-position: center;
   background-repeat: no-repeat;
+  border: none;
+
+  &:hover,
+  &:active {
+    background-color: @white;
+  }
 }
 
 .site-list__item a {
@@ -25,10 +47,27 @@
     font-weight: bold;
     line-height: 26px;
     margin: 0;
+    border: none;
+
+    &:hover {
+      background-color: @white;
+    }
+
+    &:active {
+      background-color: @white;
+    }
   }
 
   .site-list__item a {
     color: #000000;
+
+    &:hover {
+      color: @blue;
+    }
+
+    &:active {
+      color: #cacaca;
+    }
   }
 
   .site-list__item:nth-child(3) {
@@ -36,6 +75,7 @@
   }
 
   .site-list__item:nth-child(4) {
+    box-shadow: none;
     order: 1;
   }
 
