--- a/source/less/blocks/advantage.less
+++ b/source/less/blocks/advantage.less
@@ -22,6 +22,7 @@
   background-color: @blue;
   padding: 45px 20px 44px;
   box-sizing: border-box;
+  position: relative;
 
   &--road,
   &--area,
@@ -48,7 +49,7 @@
 
 .advantage__description--city {
   background-image: url("../../img/bg-triangle.svg");
-  background-size: contain;
+  background-size: 100%;
   background-position: top;
   background-repeat: no-repeat;
   padding-top: 106px;
@@ -61,20 +62,14 @@
   width: 320px;
 }
 
-.advantage__img--city {
-  background-image: url("../../img/main-city-mobile@1x.jpg");
-}
-
-.advantage__img--bridge {
-  background-image: url("../../img/main-bridge-mobile@1x.jpg");
-}
-
 .advantage__wraper-bottom {
   padding: 0;
+  background-color: @lightgrey;
 }
 
 .advantage__wraper-bottom--item {
-  padding-left: 0;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 @media (min-width: @tablet-width) {
@@ -94,7 +89,6 @@
 
   .advantage__description {
     flex-basis: 33%;
-    padding: 45px 45px 47px 45px;
 
     &--road,
     &--area,
@@ -106,10 +100,11 @@
     &--area {
       border: none;
     }
-  }
 
-  .advantage__description--city {
-    background-image: none;
+    &--city {
+      padding: 45px 38px 0;
+      background-image: none;
+    }
   }
 
   .advantage__description--area {
@@ -124,18 +119,9 @@
     max-width: 100%;
   }
 
-  .advantage__img--city {
-    background-image: url("../../img/main-city-tablet@1x.jpg");
-  }
-
-  .advantage__img--bridge {
-    background-image: url("../../img/main-bridge-tablet@1x.jpg");
-  }
-
   .advantage__img {
     height: 256px;
-    flex-basis: 77%;
-    background-origin: content-box;
+    flex-basis: 68%;
   }
 
   .advantage-text__title {
@@ -174,15 +160,6 @@
 }
 
 @media (min-width: @desktop-width) {
-  .advantage__img--city {
-    background-image: url("../../img/main-city-desktop@1x.jpg");
-  }
-
-  .advantage__img--bridge {
-    background-image: url("../../img/main-bridge-desktop@1x.jpg");
-    background-position: center;
-  }
-
   .advantage__description {
     padding-top: 55px;
     padding-bottom: 60px;
@@ -198,5 +175,9 @@
 
   .advantage__wraper-bottom {
     padding: 0 29px 10px 30px;
+  }
+
+  .advantage__img--city {
+    height: 256px;
   }
 }
