--- a/source/less/blocks/book.less
+++ b/source/less/blocks/book.less
@@ -22,6 +22,10 @@
   .book__title;
 }
 
+.book__break {
+  display: none;
+}
+
 @media (min-width: @tablet-width) {
   .book__title {
     font-size: 30px;
@@ -30,6 +34,10 @@
   .book__action {
     padding-right: 100px;
     padding-left: 100px;
+  }
+
+  .book__break {
+    display: inline;
   }
 }
 
