--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -7,6 +7,19 @@
   margin-left: 20px;
   margin-right: 20px;
   text-align: center;
+
+  &:hover {
+    background-color: #669ec0;
+  }
+
+  &:active {
+    background-color: #5496bd;
+    color: rgba(255, 255, 255, 0.3);
+  }
+
+  &:disabled {
+    background-color: #e5e5e5;
+  }
 }
 
 @media (min-width: @tablet-width) {
