--- a/source/less/blocks/description.less
+++ b/source/less/blocks/description.less
@@ -30,7 +30,7 @@
   .description__img {
     height: 518px;
     background-image: url("../img/text-sedona-index.svg"), url("../img/bg-intro-triangle-tablet.svg"), url("../../img/bg-back-tablet@1x.jpg");
-    background-size: 458px auto, 100%, auto;
+    background-size: 458px auto, 100%, 100%;
   }
 
   .description__main {
@@ -49,7 +49,7 @@
   .description__img {
     height: 518px;
     background-image: url("../img/text-sedona-index.svg"), url("../img/bg-intro-triangle-desktop.svg"), url("../img/bg-back-desktop@1x.jpg");
-    background-size: 461px auto, 100%, auto;
+    background-size: 461px auto, 100%, 100%;
   }
 
   .description__main {
@@ -59,6 +59,6 @@
   .description__img-photo {
     height: 301px;
     background-image: url("../img/text-sedona.svg"), url("../img/bg-intro-triangle-desktop.svg"), url("../img/bg-back-desktop@1x.jpg");
-    background-size: 461px auto, 100%, auto;
+    background-size: 461px auto, 100%, 100%;
   }
 }
