--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -1,7 +1,7 @@
 .site-list__item {
   font-size: 18px;
   line-height: 40px;
-  padding-top: 8px;
+  padding-top: 15px;
   padding-bottom: 8px;
   margin: auto;
   font-weight: bold;
@@ -24,12 +24,10 @@
 }
 
 .site-list__item--logo {
-  height: 56px;
-  background-image: url("../../img/logo-sedona-mobile.svg");
-  background-size: 102px 85px;
-  background-position: center;
-  background-repeat: no-repeat;
   border: none;
+  padding-top: 0;
+  padding-bottom: 0;
+  height: 56px;
 
   &:hover,
   &:active {
@@ -77,18 +75,5 @@
   .site-list__item:nth-child(4) {
     box-shadow: none;
     order: 1;
-  }
-
-  .site-list__item--logo {
-    height: 56px;
-    background-image: url("../../img/logo-sedona-tablet.svg");
-    background-size: 102px 83px;
-  }
-}
-
-@media (min-width: @desktop-width) {
-  .site-list__item--logo {
-    background-image: url("../../img/logo-sedona-desktop.svg");
-    background-size: 188px 96px;
   }
 }
