--- a/source/less/style.less
+++ b/source/less/style.less
@@ -14,6 +14,7 @@
 @import "blocks/main-nav.less";
 @import "blocks/photo-view.less";
 @import "blocks/point-list.less";
+@import "blocks/form.less";
 
 html {
   box-sizing: border-box;
