--- a/source/less/blocks/description.less
+++ b/source/less/blocks/description.less
@@ -9,7 +9,7 @@
 .description__img {
   height: 390px;
   background-size: 280px auto, 100%, auto;
-  background-image: url("../img/text-sedona-index.svg"), url("../img/bg-intro-triangle-mobile.svg"), url("img/bg-back-mobile@1x.jpg");
+  background-image: url("../img/text-sedona-index.svg"), url("../img/bg-intro-triangle-mobile.svg"), url("../img/bg-back-mobile@1x.jpg");
   background-position: center, bottom, center;
   background-repeat: no-repeat;
 }
@@ -17,7 +17,7 @@
 .description__img-photo {
   height: 158px;
   background-size: 280px auto, 100%, auto;
-  background-image: url("../img/text-sedona.svg"), url("../img/bg-intro-triangle-mobile.svg"), url("img/bg-back-mobile@1x.jpg");
+  background-image: url("../img/text-sedona.svg"), url("../img/bg-intro-triangle-mobile.svg"), url("../img/bg-back-mobile@1x.jpg");
   background-position: center, bottom, bottom;
   background-repeat: no-repeat;
 }
@@ -29,7 +29,7 @@
 @media (min-width: @tablet-width) {
   .description__img {
     height: 518px;
-    background-image: url("../img/text-sedona-index.svg"), url("../img/bg-intro-triangle-tablet.svg"), url("img/bg-back-tablet@1x.jpg");
+    background-image: url("../img/text-sedona-index.svg"), url("../img/bg-intro-triangle-tablet.svg"), url("../img/bg-back-tablet@1x.jpg");
     background-size: 458px auto, 100%, 100%;
   }
 
