Выполнены все три отображения для form

--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -470,9 +470,14 @@
   }
 
   .form__unit--imprassion {
-
     & .form__title {
       text-align: center;
     }
+  }
+
+  .form__sight-wrapper {
+    padding-right: 0;
+    padding-left: 0;
+    flex-wrap: nowrap;
   }
 }
