Добавлены картинки webp и спрайт

--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -9,10 +9,10 @@
 }
 
 .copyright__html-icon {
-  // position: absolute;
-  // top: -6px;
-  // left: auto;
-  // right: -13px;
+  position: absolute;
+  top: -6px;
+  left: auto;
+  right: -13px;
   width: 27px;
   height: 36px;
 
